--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bachelor Party Dare Tracker</title>
+    <title>Max's Bucks</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Bachelor Party Dare Tracker</h1>
+        <h1>Max's Bucks</h1>
         
         <div class="teams-container">
             <div class="team" id="team1">
