Update mandatory dare requirement to 2 drinks

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="score">Points: <span>0</span></div>
                 <div class="mandatory-section">
                     <h3>Mandatory</h3>
-                    <p>Team must collectively consume as many drinks as there are team members. These can be distributed however the team decides.</p>
+                    <p>The team must collectively consume at least 2 drinks.</p>
                     <button class="mandatory-btn">Complete</button>
                 </div>
                 <div class="dare-list"></div>
@@ -27,7 +27,7 @@
                 <div class="score">Points: <span>0</span></div>
                 <div class="mandatory-section">
                     <h3>Mandatory</h3>
-                    <p>Team must collectively consume as many drinks as there are team members. These can be distributed however the team decides.</p>
+                    <p>The team must collectively consume at least 2 drinks.</p>
                     <button class="mandatory-btn">Complete</button>
                 </div>
                 <div class="dare-list"></div>
@@ -38,7 +38,7 @@
                 <div class="score">Points: <span>0</span></div>
                 <div class="mandatory-section">
                     <h3>Mandatory</h3>
-                    <p>Team must collectively consume as many drinks as there are team members. These can be distributed however the team decides.</p>
+                    <p>The team must collectively consume at least 2 drinks.</p>
                     <button class="mandatory-btn">Complete</button>
                 </div>
                 <div class="dare-list"></div>
